--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Hack or Snooze</title>
-  <link rel="stylesheet" 
+  <link rel="stylesheet"
         href="https://www.unpkg.com/bootstrap-icons/font/bootstrap-icons.css">
   <link rel="stylesheet" href="css/site.css">
   <link rel="stylesheet" href="css/user.css">
@@ -34,12 +34,28 @@
   <div class="navbar-brand">
     <a class="nav-link" href="#" id="nav-all">Hack or Snooze</a>
   </div>
+  <div>
+    <a class="nav-link" href="#" id="nav-submit">submit</a>
+  </div>
   <div class="nav-right">
     <a class="nav-link" href="#" id="nav-login">login/signup</a>
     <a class="nav-link" href="#" id="nav-user-profile"></a>
     <a class="hidden" id="nav-logout" href="#"><small>(logout)</small></a>
   </div>
 </nav>
+
+<!-- New story form -->
+<section id="new-story-form-container" class="hidden">
+  <form id="new-story-form">
+    <label for="story-author-input">Author</label>
+    <input type="text" id="story-author-input" class="story-form-input" placeholder="Story Author">
+    <label for="story-title-input">Title</label>
+    <input type="text" id="story-title-input" class="story-form-input" placeholder="Story Title">
+    <label for="story-url-input">URL</label>
+    <input type="text" id="story-url-input" class="story-form-input" placeholder="Story URL">
+    <button id="story-submit-button">Submit</button>
+  </form>
+</section>
 
 <!-- area for stories (all stories, user stories, favorites) -->
 <section class="stories-container container">
