--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <div>
     <!-- We can make the id a little more specific -->
     <a class="nav-link" href="#" id="nav-story-submit">submit</a>
+    <a class="nav-link" href="#" id="nav-favorites">favorites</a>
   </div>
   <div class="nav-right">
     <a class="nav-link" href="#" id="nav-login">login/signup</a>
