refactored in circles

--- a/index.html
+++ b/index.html
@@ -54,21 +54,24 @@
       type="text"
       id="story-author-input"
       class="story-form-input"
-      placeholder="Story Author">
+      placeholder="Story Author"
+      require>
 
     <label for="story-title-input">Title</label>
     <input
       type="text"
       id="story-title-input"
       class="story-form-input"
-      placeholder="Story Title">
+      placeholder="Story Title"
+      required>
 
     <label for="story-url-input">URL</label>
     <input
       type="text"
       id="story-url-input"
       class="story-form-input"
-      placeholder="Story URL">
+      placeholder="Story URL"
+      required>
 
     <button id="story-submit-button">Submit</button>
   </form>
