--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div class="navbar-brand">
     <a class="nav-link" href="#" id="nav-all">Hack or Snooze</a>
   </div>
-  <div>
+  <div id="nav-user-functions">
     <!-- We can make the id a little more specific -->
     <a class="nav-link" href="#" id="nav-story-submit">submit</a>
     <a class="nav-link" href="#" id="nav-favorites">favorites</a>
