--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </nav>
 
 <!-- New story form -->
-<section id="new-story-form-container" class="hidden">
+<section id="new-story-form-container" class="container hidden">
   <form id="new-story-form">
     <label for="story-author-input">Author</label>
     <input
@@ -75,6 +75,13 @@
 
     <button id="story-submit-button">Submit</button>
   </form>
+</section>
+
+<section id="user-profile-container" class="container hidden">
+  <h2>User Profile</h2>
+  <p id="user-profile-name">Name: </p>
+  <p id="user-profile-username">Username: </p>
+  <p id="user-profile-account-created">Account Created: </p>
 </section>
 
 <!-- area for stories (all stories, user stories, favorites) -->
