WIP: Feedback from code review.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </nav>
 
 <!-- New story form -->
-<section id="new-story-form-container" class="container hidden">
+<section id="new-story-form-container">
   <form id="new-story-form">
     <label for="story-author-input">Author</label>
     <input
