--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <!-- We can make the id a little more specific -->
     <a class="nav-link" href="#" id="nav-story-submit">submit</a>
     <a class="nav-link" href="#" id="nav-favorites">favorites</a>
+    <a class="nav-link" href="#" id="nav-my-stories">my stories</a>
   </div>
   <div class="nav-right">
     <a class="nav-link" href="#" id="nav-login">login/signup</a>
